sumo/tests/od2trips/errors/default_false_departlane/errors.od2trips
Error: Invalid departLane definition for option 'departlane';
 must be one of ("random", "free", "allowed", "best", or an int>=0)
Quitting (on error).
